<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_white"
    android:orientation="vertical"
    android:padding="@dimen/margin_default">

    <EditText
        android:id="@+id/fg_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:textColor="@color/black_primary_text"
        android:textSize="@dimen/text_body_medium"
        tools:text="ASDas d" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/fg_group_flowers" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fg_flowers_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fg_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/primary200"
            android:text="@string/action_save" />

        <Button
            android:id="@+id/fg_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_weight="1"
            android:background="@color/accent100"
            android:text="@string/action_delete" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/fg_events" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fg_events_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/fg_add_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary200"
        android:text="@string/faf_add_event" />

</LinearLayout>