<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_white"
    android:orientation="vertical"
    android:paddingEnd="@dimen/margin_default"
    android:paddingStart="@dimen/margin_default">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/fef_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/fef_data_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:text="@string/fef_by_type"
                android:textColor="@color/black_secondary_text" />

            <CheckBox
                android:id="@+id/fef_events_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fef_show_all"
                android:textColor="@color/black_primary_text"
                android:textSize="@dimen/text_body_normal" />

            <CheckBox
                android:id="@+id/fef_events_created"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fef_events_created"
                android:textColor="@color/black_primary_text"
                android:textSize="@dimen/text_body_normal" />

            <CheckBox
                android:id="@+id/fef_events_watering"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fef_events_watering"
                android:textColor="@color/black_primary_text"
                android:textSize="@dimen/text_body_normal" />

            <CheckBox
                android:id="@+id/fef_events_fertilizer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fef_events_fertilizer"
                android:textColor="@color/black_primary_text"
                android:textSize="@dimen/text_body_normal" />

            <CheckBox
                android:id="@+id/fef_events_transplantation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fef_events_transplantation"
                android:textColor="@color/black_primary_text"
                android:textSize="@dimen/text_body_normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:text="@string/fef_by_elements"
                android:textColor="@color/black_secondary_text" />

            <RadioGroup
                android:id="@+id/fef_filter_elements_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/fef_elements_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fef_show_all"
                    android:textColor="@color/black_primary_text"
                    android:textSize="@dimen/text_body_normal" />

                <RadioButton
                    android:id="@+id/fef_flowers_only"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fef_flowers_only"
                    android:textColor="@color/black_primary_text"
                    android:textSize="@dimen/text_body_normal" />

                <RadioButton
                    android:id="@+id/fef_groups_only"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fef_groups_only"
                    android:textColor="@color/black_primary_text"
                    android:textSize="@dimen/text_body_normal" />

                <RadioButton
                    android:id="@+id/fef_selected_only"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fef_selected_only"
                    android:textColor="@color/black_primary_text"
                    android:textSize="@dimen/text_body_normal" />
            </RadioGroup>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/fef_selected_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_default"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:paddingBottom="@dimen/margin_default"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/fef_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:background="@color/primary800"
        android:text="@string/action_filter"
        android:textColor="@color/white_primary_text"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>