<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.constraint.Guideline
            android:id="@+id/faf_guideline_image_bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <ImageView
            android:id="@+id/faf_flower_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_primary_gradient"
            android:contentDescription="@string/faf_content_flower_image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/faf_guideline_image_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/black_shadow_light"
            app:layout_constraintBottom_toBottomOf="@id/faf_flower_image"
            app:layout_constraintEnd_toEndOf="@id/faf_flower_image"
            app:layout_constraintStart_toStartOf="@id/faf_flower_image"
            app:layout_constraintTop_toTopOf="@id/faf_flower_image" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/faf_choose_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_fab"
            app:layout_constraintBottom_toBottomOf="@id/faf_guideline_image_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/faf_guideline_image_bottom"
            app:srcCompat="@drawable/ic_menu_camera" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/faf_flower_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_big"
            android:hint="@string/faf_flower_name_hint"
            android:textColorHint="@color/accent200"
            app:layout_constraintTop_toBottomOf="@id/faf_guideline_image_bottom">

            <EditText
                android:id="@+id/faf_flower_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:textColor="@color/black_primary_text"
                tools:ignore="LabelFor"
                tools:text="Asd asd " />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/faf_choose_room"
            style="@style/TextButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_medium"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginTop="@dimen/margin_fab"
            android:text="@string/faf_choose_room"
            android:textColor="@color/black_secondary_text"
            android:textSize="@dimen/text_body_medium"
            app:layout_constraintTop_toBottomOf="@id/faf_flower_name_layout" />

        <Button
            android:id="@+id/faf_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_medium"
            android:text="@string/action_create"
            app:layout_constraintBottom_toBottomOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/faf_snackbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:theme="@style/AppThemeDark" />

</LinearLayout>